Changed auditd_max_log_file from an integer to a string.

--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -152,7 +152,7 @@ cisecurity::redhat7::security::verify_duplicate_usernames_notexist: 'enabled'
 cisecurity::redhat7::services::auditd_action_mail_acct: 'root'
 cisecurity::redhat7::services::auditd_admin_space_left_action: 'halt'
 cisecurity::redhat7::services::auditd_configure_rules: 'enabled'
-cisecurity::redhat7::services::auditd_max_log_file: 8
+cisecurity::redhat7::services::auditd_max_log_file: '8'
 cisecurity::redhat7::services::auditd_max_log_file_action: 'keep_logs'
 cisecurity::redhat7::services::auditd_space_left_action: 'email'
 cisecurity::redhat7::services::auditd_configure_boot_auditing: 'enabled'
