--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -202,9 +202,13 @@ cisecurity::redhat7::services::rsyslog_remote_servers:
 cisecurity::redhat7::services::slapd: 'disabled'
 cisecurity::redhat7::services::smb: 'disabled'
 cisecurity::redhat7::services::snmpd: 'disabled'
+cisecurity::redhat7::services::sshd_allowed_groups: []
+cisecurity::redhat7::services::sshd_allowed_users: []
 cisecurity::redhat7::services::sshd_banner_file: '/etc/issue.net'
-cisecurity::redhat7::services::sshd_client_alive_count_max: '4'
+cisecurity::redhat7::services::sshd_client_alive_count_max: '0'
 cisecurity::redhat7::services::sshd_client_alive_interval: '300'
+cisecurity::redhat7::services::sshd_denied_groups: []
+cisecurity::redhat7::services::sshd_denied_users: []
 cisecurity::redhat7::services::sshd_hostbased_authentication: 'no'
 cisecurity::redhat7::services::sshd_ignore_rhosts: 'yes'
 cisecurity::redhat7::services::sshd_login_grace_time: '60'
@@ -216,9 +220,6 @@ cisecurity::redhat7::services::sshd_permitted_ciphers:
   - 'aes256-ctr'
   - 'aes192-ctr'
   - 'aes128-ctr'
-  - 'aes256-gcm@openssh.com'
-  - 'aes128-gcm@openssh.com'
-  - 'chacha20-poly1305@openssh.com'
 cisecurity::redhat7::services::sshd_permitted_macs:
   - 'hmac-sha2-512-etm@openssh.com'
   - 'hmac-sha2-256-etm@openssh.com'
