Changed log file permission remediation from an exec resource to a cron resource.  Puppet constantly throwing intentional changes during every run regardless of whether corrective actions were done or not.

--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -12,6 +12,8 @@ cisecurity::redhat7::filesystem::hfsplus: 'disabled'
 cisecurity::redhat7::filesystem::home_mount_options:
   - 'nodev'
 cisecurity::redhat7::filesystem::jffs2: 'disabled'
+cisecurity::redhat7::filesystem::log_file_perms_cron_start_hour: '*'
+cisecurity::redhat7::filesystem::log_file_perms_cron_start_minute: '37'
 cisecurity::redhat7::filesystem::remediate_log_file_perms: 'enabled'
 cisecurity::redhat7::filesystem::remediate_ungrouped_files: 'enabled'
 cisecurity::redhat7::filesystem::remediate_unowned_files: 'enabled'
