Fixed bad mount options for /tmp. Added physical TTYs for root login.

--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -26,8 +26,7 @@ cisecurity::redhat7::filesystem::removable_media_mount_options:
 cisecurity::redhat7::filesystem::removable_media_partitions: []
 cisecurity::redhat7::filesystem::squashfs: 'disabled'
 cisecurity::redhat7::filesystem::tmp_mount_options:
-  - 'mode=1777'
-  - 'astrictatime'
+  - 'strictatime'
   - 'noexec'
   - 'nodev'
   - 'nosuid'
@@ -147,6 +146,17 @@ cisecurity::redhat7::security::selinux: 'enforcing'
 cisecurity::redhat7::security::selinux_type: 'targeted'
 cisecurity::redhat7::security::secure_terminals:
   - 'console'
+  - 'tty1'
+  - 'tty2'
+  - 'tty3'
+  - 'tty4'
+  - 'tty5'
+  - 'tty6'
+  - 'tty7'
+  - 'tty8'
+  - 'tty9'
+  - 'tty10'
+  - 'tty11'
 cisecurity::redhat7::security::syslog_facility: 'auth'
 cisecurity::redhat7::security::syslog_severity: 'warn'
 cisecurity::redhat7::security::verify_user_groups_exist: 'enabled'
