--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -97,7 +97,7 @@ cisecurity::redhat7::pam::account_lockout_time: 900
 cisecurity::redhat7::pam::inactive_account_lockout: 'enabled'
 cisecurity::redhat7::pam::inactive_account_lockout_days: 30
 cisecurity::redhat7::pam::root_user_settings:
-  - gid: 'root'
+  gid: 'root'
 cisecurity::redhat7::pam::password_aging: 'enabled'
 cisecurity::redhat7::pam::password_aging_max_days: 90
 cisecurity::redhat7::pam::password_aging_min_days: 7
