--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -165,6 +165,8 @@ cisecurity::redhat7::security::verify_duplicate_groupnames_notexist: 'enabled'
 cisecurity::redhat7::security::verify_duplicate_uids_notexist: 'enabled'
 cisecurity::redhat7::security::verify_duplicate_usernames_notexist: 'enabled'
 
+cisecurity::redhat7::services::at_allowed_users:
+  - 'root'
 cisecurity::redhat7::services::auditd_action_mail_acct: 'root'
 cisecurity::redhat7::services::auditd_admin_space_left: 50
 cisecurity::redhat7::services::auditd_admin_space_left_action: 'halt'
@@ -179,12 +181,16 @@ cisecurity::redhat7::services::autofs: 'disabled'
 cisecurity::redhat7::services::avahi_daemon: 'disabled'
 cisecurity::redhat7::services::chargen_dgram: 'disabled'
 cisecurity::redhat7::services::chargen_stream: 'disabled'
+cisecurity::redhat7::services::configure_at_allow: 'disabled'
 cisecurity::redhat7::services::configure_auditd: 'enabled'
+cisecurity::redhat7::services::configure_cron_allow: 'disabled'
 cisecurity::redhat7::services::configure_postfix: 'enabled'
 cisecurity::redhat7::services::configure_rsyslog: 'enabled'
 cisecurity::redhat7::services::configure_sshd: 'enabled'
 cisecurity::redhat7::services::configure_time: 'enabled'
 cisecurity::redhat7::services::cron: 'enabled'
+cisecurity::redhat7::services::cron_allowed_users:
+  - 'root'
 cisecurity::redhat7::services::cups: 'disabled'
 cisecurity::redhat7::services::daytime_dgram: 'disabled'
 cisecurity::redhat7::services::daytime_stream: 'disabled'
