--- a/data/os/RedHat7.yaml
+++ b/data/os/RedHat7.yaml
@@ -81,7 +81,7 @@ cisecurity::redhat7::packages::setroubleshoot: 'uninstalled'
 cisecurity::redhat7::packages::talk: 'uninstalled'
 cisecurity::redhat7::packages::tcp_wrappers: 'installed'
 cisecurity::redhat7::packages::telnet: 'uninstalled'
-cisecurity::redhat7::packages::xorg_x11: 'uninstalled'
+cisecurity::redhat7::packages::x11_org: 'uninstalled'
 cisecurity::redhat7::packages::ypbind: 'uninstalled'
 cisecurity::redhat7::packages::yum_auto_update: 'installed'
 cisecurity::redhat7::packages::yum_auto_update_action: 'apply'
